FIX: font align

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  text-align: center;
   color: #222; }
 
 .nav-bar {
